cluster/spark.openshift.rhdp/overlays/minio/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec: {}
